--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 						<nav>
 							<ul>
                                 <li><a href="#intro">About</a></li>
-                                
 								<li><a href="https://www.linkedin.com/in/iamheny">Linkdin</a></li>
 								<li><a href="https://github.com/IamHeny">Github</a></li>
                                 <li><a href="https://www.kaggle.com/iamheny">Kaggle</a></li>
@@ -53,12 +52,14 @@
                                 Ability of solid coding, statistics, and math skills to solve real-world challenges.</p><p>
                                 Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.
                                 </p>
+                                <button class="btn btn-resume" onclick=" window.open('https://docdro.id/WTqJayp','_blank')" style="margin:30px">My Resume</button>
+
 							</article>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; 2022 IamHeny Design: <a href="https://html5up.net">HTML5 UP</a></p>
+						<p class="copyright">&copy; 2022 Heny Portfolio | Design: <a href="https://html5up.net">HTML5 UP</a></p>
 					</footer>
 
 			</div>
