--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 Ability of solid coding, statistics, and math skills to solve real-world challenges.</p><p>
                                 Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.
                                 </p>
-                                <button class="btn btn-resume" onclick=" window.open('https://docdro.id/QGKcINQ','_blank')" style="margin:30px">My Resume</button>
+                                <button class="btn btn-resume" onclick=" window.open('https://docdro.id/jdo9CNJ','_blank')" style="margin:30px">My Resume</button>
 
 							</article>
 					</div>
