--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<article id="intro">
 								<h2 class="major">About Me</h2>
                                 <center><span class="image main"><img src="images/heny.jpg" alt=""/></span><center>
-								<p>An emerging data scientist with experience in project management and customer persuasion and designing.</p><p>
+								<p>An data scientist with experience in project management and customer persuasion and designing.</p><p>
                                 Passionate about inventing different machine learning models to discover hidden insights and develop innovative solutions.</p><p>
                                 Ability of solid coding, statistics, and math skills to solve real-world challenges.</p><p>
                                 Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.
