--- a/index.html
+++ b/index.html
@@ -42,10 +42,22 @@
 				<article id="intro">
 					<h2 class="major">About Me</h2>
                     <center><span class="image main"><img src="images/heny.jpg" alt=""/></span><center>
-					<p>An data scientist with experience in project management and customer persuasion and designing.</p><p>
-                    Passionate about inventing different machine learning models to discover hidden insights and develop innovative solutions.</p><p>
-                    Ability of solid coding, statistics, and math skills to solve real-world challenges.</p><p>
-                    Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.
+					<p>
+					Hello! My name is Heny and I enjoy designing and creating and solving things and have experience in project management and customer persuasion and designing.</p><p>
+					Passionate about inventing different machine learning models to discover hidden insights and develop innovative solutions.</p><p>
+					My main focus these days is working on some full stack projects for AI to extract datas from websites and after cleaning and preprocessing with several algorithms make prediction or recommendation system and show them on website.</p><p>
+					Also I am working on one AI algorithm for finding relation between animals genes and being fit factors to find one solution for having healthy and slim body without workout and diets.</p><p>
+					And after that I will work on relation between nature laws, happiness, successful, sadness, ... factors to make one psychology application.</p><p>
+					I am Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.</p><p>
+					Here are a few my knowledges and technologies:
+					<br>Supervised and Unsupervised algorithms
+					<br>Natural Language Processing
+					<br>Reinforcement Learning
+					<br>Deep learning (CNN, RNN, LSTM, ...)
+					<br>Python (coding, web scraping, API, ...)
+					<br>AWS (storage, translation, boto3, ...)
+					<br>Making Chatbots
+					<br>Work with Javascript, Java, Android, Node.js, C#, SQL, NoSQL, ...                    
                     </p>
                     <button class="btn btn-resume" onclick=" window.open('https://docdro.id/jdo9CNJ','_blank')" style="margin:30px">My Resume</button>
 				</article>
