--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<!-- Main -->
 			<div id="main">
 				<!-- Intro -->
-				<article id="intro">
+				<article id="intro"  style="letter-spacing: 1px;">
 					<h2 class="major">About Me</h2>
                     <center><span class="image main"><img src="images/heny.jpg" alt=""/></span><center>
 					<p>
@@ -49,16 +49,15 @@
 					Also I am working on one AI algorithm for finding relation between animals genes and being fit factors to find one solution for having healthy and slim body without workout and diets.</p><p>
 					And after that I will work on relation between nature laws, happiness, successful, sadness, ... factors to make one psychology application.</p><p>
 					I am Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.</p>
-					<ul>Here are a few my knowledges and technologies:
-						<li>Supervised and Unsupervised algorithms</li>
-						<li>Natural Language Processing</li>
-						<li>Reinforcement Learning</li>
-						<li>Deep learning (CNN, RNN, LSTM, ...)</li>
-						<li>Python (coding, web scraping, API, ...)</li>
-						<li>AWS (storage, translation, boto3, ...)</li>
-						<li>Making Chatbots with seq2eq, API, RASA, NLP</li>
-						<li>Work with Javascript, Java, Android, Node.js, C#, SQL, NoSQL, ...</li>
-					</ul>
+					<b>Here are a few my knowledges and technologies:</b>
+					<br>Supervised and Unsupervised algorithms
+					<br>Natural Language Processing
+					<br>Reinforcement Learning
+					<br>Deep learning (CNN, RNN, LSTM, ...)
+					<br>Python (coding, web scraping, API, ...)
+					<br>AWS (storage, translation, boto3, ...)
+					<br>Making Chatbots with seq2eq, API, RASA, NLP
+					<br>Work with Javascript, Java, Android, Node.js, C#, SQL, NoSQL, ...
                     <button class="btn btn-resume" onclick=" window.open('https://docdro.id/jdo9CNJ','_blank')" style="margin:30px">My Resume</button>
 				</article>
 
