--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 				<nav>
 					<ul>
                         <li><a href="#intro">About</a></li>
-						<li><a href="https://www.linkedin.com/in/iamheny">Linkdin</a></li>
+						<li><a href="https://www.linkedin.com/in/iamheny" target="_blank">Linkdin</a></li>
 						<li><a href="#projects">Projects</a></li>
-                        <li><a href="https://github.com/IamHeny">Github</a></li>
-                        <li><a href="mailto:hengamehkhajehpour@gmail.com">Contact</a></li>
+                        <li><a href="https://github.com/IamHeny" target="_blank">Github</a></li>
+                        <li><a href="mailto:hengamehkhajehpour@gmail.com" target="_blank">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -58,7 +58,7 @@
 					<br>AWS (storage, translation, boto3, ...)
 					<br>Making Chatbots with seq2eq, API, RASA, NLP
 					<br>Work with Javascript, Java, Android, Node.js, C#, SQL, NoSQL, ...
-                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/jdo9CNJ','_blank')" style="margin:30px">My Resume</button>
+                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/tHiMKpF','_blank')" style="margin:30px">My Resume</button>
 				</article>
 
 				<!-- Projects -->
@@ -110,7 +110,7 @@
 				</div>
 			<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; 2022 Heny Portfolio | Design: <a href="https://html5up.net">HTML5 UP</a></p>
+					<p class="copyright">&copy; 2022 Heny Portfolio | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></p>
 				</footer>
 		</div>
 		<!-- BG -->
