--- a/index.html
+++ b/index.html
@@ -45,20 +45,24 @@
 					<p>
 					Hello! My name is Heny and I enjoy designing and creating and solving things and have experience in project management and customer persuasion and designing.</p><p>
 					Passionate about inventing different machine learning models to discover hidden insights and develop innovative solutions.</p><p>
-					My main focus these days is working on some full stack projects for AI to extract datas from websites and after cleaning and preprocessing with several algorithms make prediction or recommendation system and show them on website.</p><p>
-					Also I am working on one AI algorithm for finding relation between animals genes and being fit factors to find one solution for having healthy and slim body without workout and diets.</p><p>
-					And after that I will work on relation between nature laws, happiness, successful, sadness, ... factors to make one psychology application.</p><p>
 					I am Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.</p>
-					<b>Here are a few my knowledges and technologies:</b>
+					<p>My Activities :</p><p>
+					* My main focus these days is working on some full stack projects for AI to extract datas from websites and after cleaning and preprocessing with several algorithms make prediction or recommendation system and show them on website.</p><p>
+					* Also I am working on one AI algorithm for finding relation between animals genes and being fit factors to find one solution for having healthy and slim body without workout and diets.</p><p>
+					* In the future, I will work on relation between nature laws, happiness, successful, sadness, ... factors to make one psychology application.</p><p>
+					</p><p>My Knowledges :</p>
 					<br>Supervised and Unsupervised algorithms
 					<br>Natural Language Processing
 					<br>Reinforcement Learning
 					<br>Deep learning (CNN, RNN, LSTM, ...)
 					<br>Python (coding, web scraping, API, ...)
 					<br>AWS (storage, translation, boto3, ...)
+					<br>Apache Spark and pyspark
 					<br>Making Chatbots with seq2eq, API, RASA, NLP
-					<br>Work with Javascript, Java, Android, Node.js, C#, SQL, NoSQL, ...
-                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/tHiMKpF','_blank')" style="margin:30px">My Resume</button>
+					<br>Work with Javascript, Java, Android, Node.js, Express, Angular, React, C#, …
+					<br>Work with Databases: Unix/ Linux, Oracle, SQL, NoSQL, PL/SQL, MySQL, MongoDB, serverless
+					
+                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/vLLTG40','_blank')" style="margin:30px">My Resume</button>
 				</article>
 
 				<!-- Projects -->
