--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 					<h2 class="major">About Me</h2>
                     <center><span class="image main"><img src="images/heny.jpg" alt=""/></span><center>
 					<p>
-					Hello! My name is Heny and I enjoy designing and creating and solving things and have experience in project management and customer persuasion and designing.</p><p>
+					<b>Hello! My name is Heny</b> and I enjoy designing and creating and solving things and have experience in project management and customer persuasion and designing.</p><p>
 					Passionate about inventing different machine learning models to discover hidden insights and develop innovative solutions.</p><p>
 					I am Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.</p>
-					<p>My Activities :</p><p>
+					<p><b>My Activities</b></p><p>
 					* My main focus these days is working on some full stack projects for AI to extract datas from websites and after cleaning and preprocessing with several algorithms make prediction or recommendation system and show them on website.</p><p>
 					* Also I am working on one AI algorithm for finding relation between animals genes and being fit factors to find one solution for having healthy and slim body without workout and diets.</p><p>
 					* In the future, I will work on relation between nature laws, happiness, successful, sadness, ... factors to make one psychology application.</p><p>
-					</p><p>My Knowledges :</p>
+					</p><p><b>My Knowledges</b></p>
 					<br>Supervised and Unsupervised algorithms
 					<br>Natural Language Processing
 					<br>Reinforcement Learning
@@ -61,7 +61,7 @@
 					<br>Making Chatbots with seq2eq, API, RASA, NLP
 					<br>Work with Javascript, Java, Android, Node.js, Express, Angular, React, C#, …
 					<br>Work with Databases: Unix/ Linux, Oracle, SQL, NoSQL, PL/SQL, MySQL, MongoDB, serverless
-					
+					<br> 
                     <button class="btn btn-resume" onclick=" window.open('https://docdro.id/vLLTG40','_blank')" style="margin:30px">My Resume</button>
 				</article>
 
