--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<h2 class="major">About Me</h2>
                     <center><span class="image main"><img src="images/heny.jpg" alt=""/></span><center>
 					<p>
-					<b>Hello! My name is Heny</b> and I enjoy designing and creating and solving things and have experience in project management and customer persuasion and designing.</p><p>
+					<b>Hello! My name is Heny</b> and I enjoy coding and designing and solving things with experience in project management and customer persuasion and designing.</p><p>
 					Passionate about inventing different machine learning models to discover hidden insights and develop innovative solutions.</p><p>
 					I am Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.</p>
 					<p><b>My Activities</b></p><p>
