--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					* Also I am working on one AI algorithm for finding relation between animals genes and being fit factors to find one solution for having healthy and slim body without workout and diets.</p><p>
 					* In the future, I will work on relation between nature laws, happiness, successful, sadness, ... factors to make one psychology application.</p><p>
 					</p><p><b>My Knowledges</b></p>
-					<br>Supervised and Unsupervised algorithms
+					Supervised and Unsupervised algorithms
 					<br>Natural Language Processing
 					<br>Reinforcement Learning
 					<br>Deep learning (CNN, RNN, LSTM, ...)
