--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 				</div>
 				<div class="content">
 					<div class="inner">
-						<h1>Heny</h1>
+						<h1>HannaH</h1>
                         <p>Data Science | Developer</p>
 					</div>
 				</div>
 				<nav>
 					<ul>
                         <li><a href="#intro">About</a></li>
-						<li><a href="https://www.linkedin.com/in/iamheny" target="_blank">Linkdin</a></li>
+						<li><a href="https://www.linkedin.com/in/hannahai/" target="_blank">Linkdin</a></li>
 						<li><a href="#projects">Projects</a></li>
-                        <li><a href="https://github.com/IamHeny" target="_blank">Github</a></li>
+                        <li><a href="https://github.com/HannahTech/" target="_blank">Github</a></li>
                         <li><a href="mailto:hengamehkhajehpour@gmail.com" target="_blank">Contact</a></li>
 					</ul>
 				</nav>
@@ -43,7 +43,7 @@
 					<h2 class="major">About Me</h2>
                     <center><span class="image main"><img src="images/heny.jpg" alt=""/></span><center>
 					<p>
-					<b>Hello! My name is Heny</b> and I enjoy coding and designing and solving things with experience in project management and customer persuasion and designing.</p><p>
+					<b>Hello! My name is Hannah</b> and I enjoy coding and designing and solving things with experience in project management and customer persuasion and designing.</p><p>
 					Passionate about inventing different machine learning models to discover hidden insights and develop innovative solutions.</p><p>
 					I am Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.</p>
 					<p><b>My Activities</b></p><p>
@@ -114,7 +114,7 @@
 				</div>
 			<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; 2022 Heny Portfolio | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></p>
+					<p class="copyright">&copy; 2022 Hannah Portfolio | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></p>
 				</footer>
 		</div>
 		<!-- BG -->
