--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<br>Work with Javascript, Java, Android, Node.js, Express, Angular, React, C#, …
 					<br>Work with Databases: Unix/ Linux, Oracle, SQL, NoSQL, PL/SQL, MySQL, MongoDB, serverless
 					<br> 
-                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/vLLTG40','_blank')" style="margin:30px">My Resume</button>
+                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/9VBzFf3','_blank')" style="margin:30px">My Resume</button>
 				</article>
 
 				<!-- Projects -->
