--- a/index.html
+++ b/index.html
@@ -40,17 +40,15 @@
 			<div id="main">
 				<!-- Intro -->
 				<article id="intro"  style="letter-spacing: 1px;">
-					<h2 class="major">About Me</h2>
+					<h2 class="major">Welcome!</h2>
                     <center><span class="image main"><img src="images/heny.jpg" alt=""/></span><center>
 					<p>
-					<b>Hello! My name is Hannah</b> and I enjoy coding and designing and solving things with experience in project management and customer persuasion and designing.</p><p>
-					Passionate about inventing different machine learning models to discover hidden insights and develop innovative solutions.</p><p>
-					I am Self-learning, strong ideation, ability to do things in a simple and fast way, team work management are my positive characteristics.</p>
-					<p><b>My Activities</b></p><p>
-					* My main focus these days is working on some full stack projects for AI to extract datas from websites and after cleaning and preprocessing with several algorithms make prediction or recommendation system and show them on website.</p><p>
-					* Also I am working on one AI algorithm for finding relation between animals genes and being fit factors to find one solution for having healthy and slim body without workout and diets.</p><p>
-					* In the future, I will work on relation between nature laws, happiness, successful, sadness, ... factors to make one psychology application.</p><p>
-					</p><p><b>My Knowledges</b></p>
+					<b>Hello! I'm Hannah</b> a self-learning and passionate coder and designer with experience in project management and customer persuasion.</p><p>
+					I specialize in developing innovative solutions through machine learning models and data analysis.</p><p>
+					Currently, my main focus is working on full-stack projects for AI that involve extracting data from websites and building predictive or recommendation systems.</p><p>
+					In addition, I'm developing an AI algorithm to find the relation between animals' genes and fitness factors, and I plan to create a psychology application that explores the relationship between natural laws and human emotions.</p><p>
+					My expertise includes supervised and unsupervised algorithms, natural language processing, reinforcement learning, deep learning (CNN, RNN, LSTM), Python, AWS, Apache Spark, and various programming languages and databases such as JavaScript, Java, Node.js, SQL, and NoSQL.</p><p>
+					<b>My Knowledges</b></p>
 					Supervised and Unsupervised algorithms
 					<br>Natural Language Processing
 					<br>Reinforcement Learning
@@ -62,7 +60,7 @@
 					<br>Work with Javascript, Java, Android, Node.js, Express, Angular, React, C#, …
 					<br>Work with Databases: Unix/ Linux, Oracle, SQL, NoSQL, PL/SQL, MySQL, MongoDB, serverless
 					<br> 
-                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/9VBzFf3','_blank')" style="margin:30px">My Resume</button>
+                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/CTy0aZ1','_blank')" style="margin:30px">See My Resume</button>
 				</article>
 
 				<!-- Projects -->
