--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<br>Work with Javascript, Java, Android, Node.js, Express, Angular, React, C#, …
 					<br>Work with Databases: Unix/ Linux, Oracle, SQL, NoSQL, PL/SQL, MySQL, MongoDB, serverless
 					<br> 
-                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/CTy0aZ1','_blank')" style="margin:30px">See My Resume</button>
+                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/vPMQUcf','_blank')" style="margin:30px">See My Resume</button>
 				</article>
 
 				<!-- Projects -->
@@ -72,9 +72,13 @@
 						  <div class="desc">In this Full stack AI project, extract information with web scraping from website and then build a recommendation system</div>
 						</div>
 						<div class="gallery">
-						  <div class="bold_desc">Full stack image captioning</div>
-						  <div class="desc">Building and integrating several components to create a complete system that can automatically generate captions for images</div>
-						</div>				  
+						  <div class="bold_desc">Design Architectural website</div>
+						  <div class="desc">Design and create an Architectural website for Arcica Company using Node, Express, Javascript, and CSS</div>
+						</div>			
+						<div class="gallery">
+							<div class="bold_desc">Movie review sentiment analysis</div>
+							<div class="desc">Made several algorithms and models for the prediction of sentiments in movie reviews such as binary and multi-class classifications, using supervised and unsupervised deep learning, pre-trained model, LSTM,...</div>
+						  </div>
 						<div class="gallery">
 						  <div class="bold_desc">Amazon product review sentiment analysis</div>
 						  <div class="desc">NLP project that with using Vader and TextBlob and SENTIWORDNET analysis reviews sentiments for amazon products</div>
@@ -102,10 +106,6 @@
 						  <div class="gallery">
 							<div class="bold_desc">Twitter sentiment analysis</div>
 							<div class="desc">One Neural network project that analysis sentiments on tweets and after inputing text by user in web app shows the sentiment</div>
-						  </div>
-						  <div class="gallery">
-							<div class="bold_desc">Predictions by several algorithms</div>
-							<div class="desc">House prediction, Stock prediction, Student scores, etc by using Supervised and Unsupervised algorithms</div>
 						  </div>
 						</div>			
 					</article>
