--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<br>Work with Javascript, Java, Android, Node.js, Express, Angular, React, C#, …
 					<br>Work with Databases: Unix/ Linux, Oracle, SQL, NoSQL, PL/SQL, MySQL, MongoDB, serverless
 					<br> 
-                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/TvPDr0e','_blank')" style="margin:30px">See My Resume</button>
+                    <button class="btn btn-resume" onclick=" window.open('https://smallpdf.com/file#s=edbe1ed6-ca92-438f-830e-8f3efcdf21a8','_blank')" style="margin:30px">See My Resume</button>
 				</article>
 
 				<!-- Projects -->
