--- a/index.html
+++ b/index.html
@@ -68,33 +68,39 @@
 					<h2 class="major">Projects</h2>
 					<div class="Project_images">
 						<div class="gallery">
-						  <div class="bold_desc">Recommendation system</div>
-						  <div class="desc">In this Full stack AI project, extract information with web scraping from website and then build a recommendation system</div>
+						  <div class="bold_desc">Full Stack Recommendation Project</div>
+						  <div class="desc">One day, searching for a watch band on Shein, I pondered the differences between expensive and cheap products. Consequently, I wrote code to identify the most crucial factor and generate recommendations</div>
 						</div>
 						<div class="gallery">
-						  <div class="bold_desc">Design Architectural website</div>
-						  <div class="desc">Design and create an Architectural website for Arcica Company using Node, Express, Javascript, and CSS</div>
+						  <div class="bold_desc">AWS Business Card Reader </div>
+						  <div class="desc">Users upload card images, AWS Rekognition extracts text, and AWS Comprehend categorizes it. The organized data is stored in DynamoDB, allowing users to query and edit business card information seamlessly</div>
 						</div>			
 						<div class="gallery">
-							<div class="bold_desc">Movie review sentiment analysis</div>
-							<div class="desc">Made several algorithms and models for the prediction of sentiments in movie reviews such as binary and multi-class classifications, using supervised and unsupervised deep learning, pre-trained model, LSTM,...</div>
+							<div class="bold_desc">Amazon Review Sentiment </div>
+							<div class="desc">Demonstrated substantial efforts in enhancing sentiment analysis for Amazon reviews by implementing three methods and training machine learning models. Evidenced improvements in model accuracy post-introduction of sentiment-adjusted ratings, optimizing customer sentiment interpretation in both general and sampled datasets</div>
 						  </div>
 						<div class="gallery">
-						  <div class="bold_desc">Amazon product review sentiment analysis</div>
-						  <div class="desc">NLP project that with using Vader and TextBlob and SENTIWORDNET analysis reviews sentiments for amazon products</div>
+						  <div class="bold_desc">Recommender System</div>
+						  <div class="desc">Developed Python scripts for personalized content recommendations: "recipes_recommender" uses the Apriori algorithm to suggest recipes based on cuisine preferences, while "songs_recommender" employs TF-IDF and cosine similarity for song recommendations. Demonstrates expertise in data processing, recommendation algorithms, and text analysis</div>
 						</div>
 						<div class="gallery">
-							<div class="bold_desc">AWS translator and convert to sound</div>
-							<div class="desc">Making one translation web app to translate texts and play them as sound with using AWS</div>
+							<div class="bold_desc">CoffeeBotClassifier</div>
+							<div class="desc">Merged JSON datasets for chatbot intent classification, investing substantial efforts in meticulous preprocessing and model optimization. Attained 100% accuracy over 500 and 1000 epochs, showcasing a commitment to excellence in TensorFlow, Keras, and scikit-learn. Demonstrated proficiency in NLP, emphasizing a dedication to achieving optimal model performance</div>
 						</div>
 						<div class="gallery">
-						  <div class="bold_desc">Several chatbot by NLP and RASA and API</div>
-						  <div class="desc">Making a chatbot for responding customers on one coffee shop with using NLP and RASA and deep learning</div>
+						  <div class="bold_desc">Twitter Sentiment Classification</div>
+						  <div class="desc">Developed a deep learning model (LSTM with Conv1D) for sentiment analysis, Optimized the model using hyperparameter tuning, resulting in a 5% accuracy improvement (from 86.91% to 89.57%), User insert one comment on webApp by Flask and after submitting it shows one happy, natural or sad emoji</div>
 						</div>		  
 						<div class="gallery">
 						  <div class="bold_desc">Handwrite detection by several methods</div>
 						  <div class="desc">Handwrite detection to predict handwrite text by using unsupervised algorithms and Neural networks</div>
 						</div>
+						<div class="gallery">
+							<div class="bold_desc">SentimentAnalysis IMDb</div>
+							<div class="desc">Implemented a sentiment analysis project using Natural Language Processing techniques on an IMDb movie review dataset.(Natural Language Toolkit (NLTK) and regular expressions for text preprocessing)
+Developed models including a supervised deep learning model (CNN and LSTM), an unsupervised autoencoder, and a pre-trained BERT model, achieving insights into sentiment classification and feature extraction.
+</div>
+						  </div>
 						<div class="gallery">
 							<div class="bold_desc">Facial recognition by deep learning</div>
 							<div class="desc">Facial recognition to predict or transfer images with NLP and Deep learning</div>
@@ -103,10 +109,7 @@
 							<div class="bold_desc">Make a real store android app</div>
 							<div class="desc">One real store mobile app, that design with android for showing images and map and ...</div>
 						  </div>
-						  <div class="gallery">
-							<div class="bold_desc">Twitter sentiment analysis</div>
-							<div class="desc">One Neural network project that analysis sentiments on tweets and after inputing text by user in web app shows the sentiment</div>
-						  </div>
+						  
 						</div>			
 					</article>
 				</div>
