--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Data Scientist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 				</div>
 				<div class="content">
 					<div class="inner">
-						<h1>HannaH</h1>
+						<h1>HengameH</h1>
                         <p>Data Science | Developer</p>
 					</div>
 				</div>
@@ -32,7 +32,7 @@
 						<li><a href="https://www.linkedin.com/in/hannahai/" target="_blank">Linkdin</a></li>
 						<li><a href="#projects">Projects</a></li>
                         <li><a href="https://github.com/HannahTech/" target="_blank">Github</a></li>
-                        <li><a href="mailto:hengamehkhajehpour@gmail.com" target="_blank">Contact</a></li>
+                        <li><a href="mailto:hannah.ai.arch@gmail.com" target="_blank">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -43,7 +43,7 @@
 					<h2 class="major">Welcome!</h2>
                     <center><span class="image main"><img src="images/heny.jpg" alt=""/></span><center>
 					<p>
-					<b>Hello! I'm Hannah</b> a self-learning and passionate coder and designer with experience in project management and customer persuasion.</p><p>
+					<b>Hello! I'm Hengameh</b> a self-learning and passionate coder and designer with experience in project management and customer persuasion.</p><p>
 					I specialize in developing innovative solutions through machine learning models and data analysis.</p><p>
 					Currently, my main focus is working on full-stack projects for AI that involve extracting data from websites and building predictive or recommendation systems.</p><p>
 					In addition, I'm developing an AI algorithm to find the relation between animals' genes and fitness factors, and I plan to create a psychology application that explores the relationship between natural laws and human emotions.</p><p>
@@ -60,7 +60,7 @@
 					<br>Work with Javascript, Java, Android, Node.js, Express, Angular, React, C#, …
 					<br>Work with Databases: Unix/ Linux, Oracle, SQL, NoSQL, PL/SQL, MySQL, MongoDB, serverless
 					<br> 
-                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/m6NAZyo','_blank')" style="margin:30px">See My Resume</button>
+                    <button class="btn btn-resume" onclick=" window.open('https://docdro.id/Z3PDrWZ','_blank')" style="margin:30px">See My Resume</button>
 				</article>
 
 				<!-- Projects -->
@@ -69,53 +69,73 @@
 					<div class="Project_images">
 						<div class="gallery">
 						  <div class="bold_desc">Full Stack Recommendation Project</div>
-						  <div class="desc">One day, searching for a watch band on Shein, I pondered the differences between expensive and cheap products. Consequently, I wrote code to identify the most crucial factor and generate recommendations</div>
+						  <div class="desc">One day, searching for a watch band on Shein, I pondered the differences between expensive and cheap products. Consequently, I wrote code to identify the most crucial factor and generate recommendations
+						<p><a class="git" href="https://github.com/HannahTech/Full-Stack-Recommendation" target="_blank">GitHub Repository</a></p></div>
 						</div>
 						<div class="gallery">
 						  <div class="bold_desc">AWS Business Card Reader </div>
-						  <div class="desc">Users upload card images, AWS Rekognition extracts text, and AWS Comprehend categorizes it. The organized data is stored in DynamoDB, allowing users to query and edit business card information seamlessly</div>
+						  <div class="desc">Users upload card images, AWS Rekognition extracts text, and AWS Comprehend categorizes it. The organized data is stored in DynamoDB, allowing users to query and edit business card information seamlessly
+							<p><a class="git" href="https://github.com/HannahTech/AWS-Business-Card-Reader" target="_blank">GitHub Repository</a></p></div>
 						</div>			
 						<div class="gallery">
 							<div class="bold_desc">Amazon Review Sentiment </div>
-							<div class="desc">Demonstrated substantial efforts in enhancing sentiment analysis for Amazon reviews by implementing three methods and training machine learning models. Evidenced improvements in model accuracy post-introduction of sentiment-adjusted ratings, optimizing customer sentiment interpretation in both general and sampled datasets</div>
+							<div class="desc">Demonstrated substantial efforts in enhancing sentiment analysis for Amazon reviews by implementing three methods and training machine learning models. Evidenced improvements in model accuracy post-introduction of sentiment-adjusted ratings, optimizing customer sentiment interpretation in both general and sampled datasets
+								<p><a class="git" href="https://github.com/HannahTech/Amazon-Review-Sentiment" target="_blank">GitHub Repository</a></p></div>
+
 						  </div>
 						<div class="gallery">
 						  <div class="bold_desc">Recommender System</div>
-						  <div class="desc">Developed Python scripts for personalized content recommendations: "recipes_recommender" uses the Apriori algorithm to suggest recipes based on cuisine preferences, while "songs_recommender" employs TF-IDF and cosine similarity for song recommendations. Demonstrates expertise in data processing, recommendation algorithms, and text analysis</div>
+						  <div class="desc">Developed Python scripts for personalized content recommendations: "recipes_recommender" uses the Apriori algorithm to suggest recipes based on cuisine preferences, while "songs_recommender" employs TF-IDF and cosine similarity for song recommendations. Demonstrates expertise in data processing, recommendation algorithms, and text analysis
+							<p><a class="git" href="https://github.com/HannahTech/Recommender-System" target="_blank">GitHub Repository</a></p></div>
+
 						</div>
 						<div class="gallery">
 							<div class="bold_desc">CoffeeBotClassifier</div>
-							<div class="desc">Merged JSON datasets for chatbot intent classification, investing substantial efforts in meticulous preprocessing and model optimization. Attained 100% accuracy over 500 and 1000 epochs, showcasing a commitment to excellence in TensorFlow, Keras, and scikit-learn. Demonstrated proficiency in NLP, emphasizing a dedication to achieving optimal model performance</div>
+							<div class="desc">Merged JSON datasets for chatbot intent classification, investing substantial efforts in meticulous preprocessing and model optimization. Attained 100% accuracy over 500 and 1000 epochs, showcasing a commitment to excellence in TensorFlow, Keras, and scikit-learn. Demonstrated proficiency in NLP, emphasizing a dedication to achieving optimal model performance
+								<p><a class="git" href="https://github.com/HannahTech/CoffeeBot-Classifier" target="_blank">GitHub Repository</a></p></div>
+
 						</div>
 						<div class="gallery">
 						  <div class="bold_desc">Twitter Sentiment Classification</div>
-						  <div class="desc">Developed a deep learning model (LSTM with Conv1D) for sentiment analysis, Optimized the model using hyperparameter tuning, resulting in a 5% accuracy improvement (from 86.91% to 89.57%), User insert one comment on webApp by Flask and after submitting it shows one happy, natural or sad emoji</div>
+						  <div class="desc">Developed a deep learning model (LSTM with Conv1D) for sentiment analysis, Optimized the model using hyperparameter tuning, resulting in a 5% accuracy improvement (from 86.91% to 89.57%), User insert one comment on webApp by Flask and after submitting it shows one happy, natural or sad emoji
+							<p><a class="git" href="https://github.com/HannahTech/Sentiment-Tweeter-Web-App" target="_blank">GitHub Repository</a></p></div>
+
 						</div>		  
 						<div class="gallery">
 						  <div class="bold_desc">Handwrite detection by several methods</div>
-						  <div class="desc">Handwrite detection to predict handwrite text by using unsupervised algorithms and Neural networks</div>
+						  <div class="desc">Handwrite detection to predict handwrite text by using unsupervised algorithms and Neural networks
+							<p><a class="git" href="https://github.com/HannahTech/" target="_blank">GitHub Repository</a></p></div>
+
 						</div>
 						<div class="gallery">
 							<div class="bold_desc">SentimentAnalysis IMDb</div>
-							<div class="desc">Implemented a sentiment analysis project using Natural Language Processing techniques on an IMDb movie review dataset.(Natural Language Toolkit (NLTK) and regular expressions for text preprocessing)
+							<div class="desc">Implemented a sentiment analysis project using NLP on an IMDb movie review dataset.
 Developed models including a supervised deep learning model (CNN and LSTM), an unsupervised autoencoder, and a pre-trained BERT model, achieving insights into sentiment classification and feature extraction.
+
+<p><a class="git" href="https://github.com/HannahTech/SentimentAnalysis-IMDb" target="_blank">GitHub Repository</a></p></div>
+
 </div>
-						  </div>
 						<div class="gallery">
 							<div class="bold_desc">Facial recognition by deep learning</div>
-							<div class="desc">Facial recognition to predict or transfer images with NLP and Deep learning</div>
+							<div class="desc">Facial recognition to predict or transfer images with NLP and Deep learning
+							<p><a class="git" href="https://github.com/HannahTech/Some-Projects" target="_blank">GitHub Repository</a></p></div>
+
 						</div>
 						<div class="gallery">
 							<div class="bold_desc">Make a real store android app</div>
-							<div class="desc">One real store mobile app, that design with android for showing images and map and ...</div>
-						  </div>
+							<div class="desc">One real store mobile app, that design with android for showing images and map and ...
+								<p><a class="git" href="https://github.com/HannahTech/" target="_blank">GitHub Repository</a></p>
+
+							</div>
+
+						</div>
 						  
 						</div>			
 					</article>
 				</div>
 			<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; 2022 Hannah Portfolio | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></p>
+					<p class="copyright">&copy; 2022 Hengameh Portfolio | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></p>
 				</footer>
 		</div>
 		<!-- BG -->
