--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <br />
           <button
             class="btn btn-resume"
-            onclick=" window.open('https://amethyst-lurlene-25.tiiny.site','_blank')"
+            onclick=" window.open('https://smallpdf.com/file#s=6dcc4857-90fb-467f-b0eb-8638e729dd0f','_blank')"
             style="margin: 30px"
           >
             See My Resume
